--- a/dev.ipynb
+++ b/dev.ipynb
@@ -285,17 +285,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(\"I didn't say the reason for forgiving is because of the relationship. I would require remorse and a promise not to do it again. It is for those things I would forgive and the understanding that no one is perfect.\", 'calm'), ('Or you could take care of yourself and stop relying on a free healthcare system to take care of your lazy inaction to your own health.', 'awry'), ('Intent is irrelevant here. No one is EVER going to mistake a coal miner for someone doing blackface.', 'calm'), ('That\\'s like saying \"you\\'re always supporting the child porn system\", cause you probably bought something at a gas station where part of your purchase went to an employees paycheck, who then used some money to buy child porn. \\nIt\\'s kind of a moot point. ', 'calm'), ('You still arent addressing the question. So much typing, so little substance.', 'awry'), (\"This isn't 4chan. You're a lot less edgy than you think. \\n\\nIF you throw your stuff onto the highway than you're a slob. \\n\\nYou are choosing to act like a slob. \", 'awry'), (\"Who said it can't? But i think i already disproved the white serial killer thing. \", 'calm'), ('No, a haircut is never worse than a circumcision. Your logic is so ridiculous. I mean really, a haircut is worse than a circumcision? Stop being pretentious about something that is quite clearly and objectively not harmful. \\n\\n', 'awry'), ('That source is literal propaganda. I am telling you the exact law and you think a random person writing overrides the literal law\\n\\nLess than half of white veterans even used GI benefits.', 'awry'), (\"This isn't the middle ages. We have this thing called soap, I suggest you use it. Modern humans tend to do this thing called washing themselves. It's how we stay clean. I really hope this isn't lost on you. Clean your damn crud.\", 'awry'), (\"Sure, but what OP is saying is that white privilege doesn't give you as much privilege compared to being born in a rich family with connections. \\n\\nHe's not saying it doesn't exist or anything like that.\", 'calm'), (\"There's a video of the comments made by Crowder, posted by Carlos:\\n\\nhttps://twitter.com/gaywonk/status/1134264395717103617\", 'calm'), (\"You're reaching. You're rationalizing and ignoring the arguments people making to shoehorn your argument.\\n\\nHomosexuality is about romantic love.\\n\\nI'm bored of this conversation.\", 'awry'), ('It has had a effect on your attitude, though maybe not the effect you were expecting? What if the objective is to merely razzle the masses and cause social chaos? If chaos is a ladder, then who stands to climb? The Russians. ', 'calm'), (\"Ah, so your comment is just a giant strawman. The entire post is about doctors and medical licenses. Nobody anywhere has said an antivaxxer shouldn't be allowed to do medical research.\", 'awry'), ('Well if you believe that second part about putting all uyghurs into concentration camps base solely on their ethnicity, you are far more racist than I could ever be. Congrats.', 'awry'), ('That is ridiculous. Just read my damn post. I explicitly said they can be taught religion if they want, but no religion should have special preference when being taught.', 'awry'), (\"If they cared about providing material support to women and children, they wouldn't vote for Republicans.\", 'calm'), (\"But doesn't that kind of begin to break down the concept of racial profiling as a whole? wouldn't it be more effective when hiding a killer to not bother limiting your search based on race because clearly all crimes are not committed by black people?\", 'calm'), ('I think you’re pointing out a distinction without a difference. If the capitol police were told not to use heightened tactics against the Trump supporting terrorists and were told to use it against the BLM, that right there is institutional racism. This isn’t about if the individual police were/are racists, it’s about the system they work for.', 'calm')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "file_path = \"/home/sqt2/myExperiment/cs6742-trama/data/strong_awry_utterances.json\"\n",
@@ -318,13 +310,54 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 'calm', 1: 'calm', 2: 'calm', 3: 'awry', 4: 'awry', 5: 'awry', 6: 'calm', 7: 'calm', 8: 'calm', 9: 'awry', 10: 'awry', 11: 'awry', 12: 'awry', 13: 'awry', 14: 'awry', 15: 'calm', 16: 'awry', 17: 'calm', 18: 'calm', 19: 'calm'}\n"
+     ]
+    }
+   ],
    "source": [
-    "cmv_dir = \"/reef/lyt5_cga_cmv\"\n",
-    "            corpus = Corpus(cmv_dir)\n",
-    "            label_metadata = \"has_removed_comment\""
+    "print(label)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_file_path = \"/home/sqt2/myExperiment/cs6742-trama/data/human/human_data.json\"\n",
+    "\n",
+    "# Save the dictionary to a JSON file\n",
+    "with open(output_file_path, \"w\") as file:\n",
+    "    json.dump(human_data, file, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_file_path = \"/home/sqt2/myExperiment/cs6742-trama/data/human/label(dont_check)/label.json\"\n",
+    "\n",
+    "# Save the dictionary to a JSON file\n",
+    "with open(output_file_path, \"w\") as file:\n",
+    "    json.dump(label, file, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
