--- a/paper/acl_latex.tex
+++ b/paper/acl_latex.tex
@@ -116,13 +116,13 @@ The document itself conforms to its own specifications, and is therefore an exam
 These instructions should be used both for papers submitted for review and for final versions of accepted papers.
 \end{abstract}
 
-\input{introduction}
-\input{related-works}
-\input{data}
-\input{methodology}
-\input{results}
-\input{future-work}
-\input{conclusion}
+\input{sections/introduction}
+\input{sections/related-works}
+\input{sections/data}
+\input{sections/methodology}
+\input{sections/results}
+\input{sections/future-work}
+\input{sections/conclusion}
 
 \section*{Acknowledgments}
 
