course project specific section

--- a/paper/acl_latex.tex
+++ b/paper/acl_latex.tex
@@ -104,6 +104,7 @@ These instructions should be used both for papers submitted for review and for f
 \input{sections/data}
 \input{sections/methodology}
 \input{sections/results}
+\input{sections/project-specifics}
 \input{sections/future-work}
 \input{sections/conclusion}
 
