add Task Formulation

--- a/paper/sections/data.tex
+++ b/paper/sections/data.tex
@@ -2,7 +2,7 @@
 
 This project uses the CGA datasets.
 This consists of two separate datasets: Reddit ChangeMyView (CMV) and Wikipedia talk pages~\citep{chang-danescu-niculescu-mizil-2019-trouble,zhang-etal-2018-conversations}.
-The CGA-CMV dataset consists of 6,824 conversations from the CMV subreddit.
+The CGA-CMV dataset consists of $20,576$ conversations from the CMV subreddit.
 A conversation is considered to go awry if it eventually has a comment removed by a moderator for violating Rule 2 of the subreddit: "Don't be rude or hostile to other users."
-The CGA-Wiki dataset consists of 4,188 conversations from Wikipedia talk pages.
+The CGA-Wiki dataset consists of $4,188$ conversations from Wikipedia talk pages.
 The conversations were labeled by crowdworkers as either containing a personal attack or staying calm throughout.
