--- a/paper/acl_latex.tex
+++ b/paper/acl_latex.tex
@@ -101,6 +101,7 @@ These instructions should be used both for papers submitted for review and for f
 
 \input{sections/introduction}
 \input{sections/related-works}
+\input{paper/sections/cga_task}
 \input{sections/data}
 \input{sections/methodology}
 \input{sections/results}
