--- a/paper/sections/methodology.tex
+++ b/paper/sections/methodology.tex
@@ -28,7 +28,7 @@ However, within the full context, it becomes evident that User2 is criticizing U
 %
 Nevertheless, the proportion of test samples where RoBERTa requires context to make correct forecasts is minimal, particularly in CGA-CMV.
 
-\xhdr{Context understanding is not important to SOTA performance} 
+\xhdr{RQ1. Context understanding is not important to SOTA performance} 
 %
 By evaluating the performance of models under the No-Context setting, we can assess the importance of conversational context to the performance of RoBERTa-large in CGA tasks. 
 %
