--- a/paper/tables/trama_examples.tex
+++ b/paper/tables/trama_examples.tex
@@ -9,7 +9,7 @@
             \textbf{\textit{(2) User3:}} No you don't lol.
             \\
             \multicolumn{1}{|c|}{Label: \textcolor{red}{Awry}\quad        
-            Normal Pred: \textcolor{red}{Awry}}\\
+            Normal Forecast: \textcolor{red}{Awry}}\\
             
             \hline
     
@@ -17,7 +17,7 @@
            \\
             \textbf{\textit{(2) User3:}}No you don't lol.
             \\ \multicolumn{1}{|c|}{Label: \textcolor{teal}{Calm}\quad
-            Normal Pred: \textcolor{red}{Awry}}
+            Normal Forecast: \textcolor{red}{Awry}}
             \\
             
             \hline
