--- a/paper/acl_latex.tex
+++ b/paper/acl_latex.tex
@@ -99,7 +99,7 @@
 
 \input{sections/introduction}
 \input{sections/related-works}
-\input{paper/sections/cga_task}
+\input{sections/cga_task}
 \input{sections/data}
 \input{sections/methodology}
 \input{sections/results}
