--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -17,7 +17,7 @@ State-of-the-art (SOTA) models are only able to achieve an accuracy of slightly 
 This performance leaves much to be desired. 
 The prior work that developed the models does not carefully examine how the model makes its predictions. 
 Further understanding of the model and its shortcomings would pave the way for future improvements on the CGA task. 
-In particular, this project investigated the model's use of the conversational context in making its predictions. 
+In particular, this project investigates the models' use of the conversational context in making its predictions. 
 
 We wanted to understand two main research questions.
 \begin{enumerate}
@@ -26,7 +26,7 @@ We wanted to understand two main research questions.
 \end{enumerate}
 We hypothesized that conversational context is not actually necessary for the model's performance, and that the model is not utilizing the context when making forecasts. 
 
-This project answers these questions by modifying and creating new contexts for the model to make forecasts with. 
-We could then see how the model's predictions changed as a result of the new context. 
+This project answers these questions by modifying and creating new contexts for the models to make forecasts with. 
+We could then see how the models' predictions changed as a result of the new context. 
 Ultimately, we found that SOTA models do not need conversational context for their performance, but that they do in fact utilize conversational contexts when making their forecasts. 
 These results suggest that the current CGA benchmark may not be difficult enough, and that a new benchmark is needed to help train and improve model performance. 
