--- a/paper/acl_latex.tex
+++ b/paper/acl_latex.tex
@@ -93,10 +93,8 @@
 
 \begin{document}
 \maketitle
-\begin{abstract}
 
-\end{abstract}
-
+\input{sections/abstract}
 \input{sections/introduction}
 \input{sections/related-works}
 \input{sections/cga_task}
