--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -33,4 +33,4 @@ From this result, we further hypothesized that the models are not actually utili
 To that end, we design the \textbf{Tra}jectory \textbf{Ma}tters (TraMa) behavioral test.
 This test creates an artificial context that would lead to a calm conversation, even when the targeted utterance is highly escalatory.
 We find that SOTA models do in fact utilize conversational contexts when making forecasts, but the impact of context is less pronounced when the utterance is highly escalatory.
-These results suggest that the current CGA benchmark may not be difficult enough, and that a new benchmark is needed to help train and improve model performance. 
+%These results suggest that the current CGA benchmark may not be difficult enough, and that a new benchmark is needed to help train and improve model performance. 
