--- a/paper/sections/related-works.tex
+++ b/paper/sections/related-works.tex
@@ -1,6 +1,6 @@
 \section{Related Work}
 Our work relates to prior research on anti-social behaviors in online 
-communities, converational forecasting, and constructing adversarial examples
+communities, conversation forecasting, and constructing adversarial examples
 to evaluate language systems.
 
 \xhdr{Online anti-social behaviors}
@@ -16,8 +16,9 @@ hostile behaviors such as personal attacks.
 Our work focuses on this dimension of anti-social interactions.
 
 \xhdr{Conversation forecasting}
-Unlike conversation classification tasks, which focus on categorizing the state of 
-a conversation, forecasting entails predicting a future outcome in the conversation. 
+Unlike conversation classification tasks, which focus on categorizing the end 
+state of a conversation, forecasting entails predicting a future outcome in 
+the conversation. 
 %
 Therefore, conversational forecasting has the potential to anticipate behaviors 
 and inform decision-making in real-time.
